# belgian-train-board

./: .gitignore  README.md  lambda_deploy.sh  lambda_function.py  pyproject.toml  setup.py
src/: create_view.py  fetch_data.py  update_webpage.py
tmp/: index.html
